--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			</p>
 		</div>
 	</nav>
-	<nav class="grid-main">
+	<nav class="grid-main-2">
 		<img src="img/bg-image-2.jpg" alt="image" class="page-image">
 		<div class="grid text-grid-2 text-center bg-transparent-blue">
 			<h1 class="font-circular header-image-text">
@@ -38,6 +38,8 @@
 				Earlier today I was really horny, and I saw what I thought to be a blank DVD. I thought, DVDs have a tight hole, they might feel pretty good. So I put my soft pp into the hole of the DVD, and for a few seconds as I started getting harder, it felt pretty good, but then, once I was fully erect, it started being painful. My pp was stuck in the DVD, and I had to break it in half to get if out. It was then when I flipped the broken DVD over and realized that it was not a blank DVD, but a copy of the Pixar movie Up.. Well guys, guess I fucked up.
 			</p>
 		</div>
+	</nav>
+	<nav class="menu">
 	</nav>
 </body>
 </html>
