--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
 	<meta name="viewport"
 	      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link href="img/style.css" rel="stylesheet" type="text/css">
+	<link href="css/style.css" rel="stylesheet" type="text/css">
+	<link href='https://fonts.googleapis.com/css?family=Caveat' rel='stylesheet'>
 	<title>OUI</title>
 </head>
-<body class="bg-blue">
+<body class="bg-yellow">
 	<header class="bg-yellow grid-header mb-3">
 		<img src="img/main-logo.svg" alt="OUI" class="pl-5 logo-image">
 		<div class="header-menu">
@@ -17,28 +18,17 @@
 			<a href="#" class="header-text font-circular">LOCATIONS</a>
 		</div>
 	</header>
-	<nav class="grid-main mb-3">
-		<img src="img/bg-image-1.jpg" alt="image" class="page-image">
-		<div class="grid text-grid-1 text-center bg-transparent-blue">
-			<h1 class="font-circular header-image-text">
-				CUSTOMER SERVICE
-			</h1>
-			<p class="font-circular image-text align-top">
-				Earlier today I was really horny, and I saw what I thought to be a blank DVD. I thought, DVDs have a tight hole, they might feel pretty good. So I put my soft pp into the hole of the DVD, and for a few seconds as I started getting harder, it felt pretty good, but then, once I was fully erect, it started being painful. My pp was stuck in the DVD, and I had to break it in half to get if out. It was then when I flipped the broken DVD over and realized that it was not a blank DVD, but a copy of the Pixar movie Up.. Well guys, guess I fucked up.
-			</p>
+	<main class="main-grid">
+		<h1 class="header-text">
+			A coffee shop with a French twist!
+		</h1>
+		<div class="main-image">
+			<img src="img/main-grid-image.jpg" alt="food" class="main-grid-image">
 		</div>
-	</nav>
-	<nav class="grid-main-2">
-		<img src="img/bg-image-2.jpg" alt="image" class="page-image">
-		<div class="grid text-grid-2 text-center bg-transparent-blue">
-			<h1 class="font-circular header-image-text">
-				CUSTOMER SERVICE
-			</h1>
-			<p class="font-circular image-text align-top">
-				Earlier today I was really horny, and I saw what I thought to be a blank DVD. I thought, DVDs have a tight hole, they might feel pretty good. So I put my soft pp into the hole of the DVD, and for a few seconds as I started getting harder, it felt pretty good, but then, once I was fully erect, it started being painful. My pp was stuck in the DVD, and I had to break it in half to get if out. It was then when I flipped the broken DVD over and realized that it was not a blank DVD, but a copy of the Pixar movie Up.. Well guys, guess I fucked up.
-			</p>
-		</div>
-	</nav>
+		<p class="font-circular">
+			Since the beginning, our goal has been to serve and uplift society by enriching human connections and social togetherness.
+		</p>
+	</main>
 	<nav class="menu">
 	</nav>
 </body>
