added a cool load animation and refactored some code
basically restructured the code in order to make it work with the animation

--- a/index.html
+++ b/index.html
@@ -10,26 +10,37 @@
 	<title>OUI</title>
 </head>
 <body class="bg-yellow">
-	<header class="bg-yellow grid-header mb-3">
-		<img src="img/main-logo.svg" alt="OUI" class="pl-5 logo-image">
-		<div class="header-menu">
-			<a href="#" class="header-text font-circular">MENU</a>
-			<a href="#" class="header-text font-circular">ABOUT US</a>
-			<a href="#" class="header-text font-circular">LOCATIONS</a>
-		</div>
-	</header>
-	<main class="main-grid">
-		<h1 class="header-text">
-			A coffee shop with a French twist!
-		</h1>
-		<div class="main-image">
-			<img src="img/main-grid-image.jpg" alt="food" class="main-grid-image">
-		</div>
-		<p class="font-circular">
-			Since the beginning, our goal has been to serve and uplift society by enriching human connections and social togetherness.
-		</p>
-	</main>
-	<nav class="menu">
-	</nav>
+	<!-- THE LOAD ANIMATION -->
+	<div class="effect-wrapper">
+		<div id="color-1"></div>
+		<div id="color-2"></div>
+		<div id="color-3"></div>
+		<div id="color-4"></div>
+	</div>
+	<!-- THE MAIN CONTENT -->
+	<div id="main-content">
+		<header class="bg-yellow grid-header mb-3">
+			<img src="img/main-logo.svg" alt="OUI" class="pl-5 logo-image">
+			<div class="header-menu">
+				<a href="#" class="header-text font-circular">MENU</a>
+				<a href="#" class="header-text font-circular">ABOUT US</a>
+				<a href="#" class="header-text font-circular">LOCATIONS</a>
+			</div>
+		</header>
+		<main class="main-grid pl-5 pr-5">
+			<h1 class="header-text">
+				A coffee shop with a French twist!
+			</h1>
+			<div class="main-image">
+				<img src="img/main-grid-image.jpg" alt="food" class="main-grid-image">
+			</div>
+			<p class="font-circular">
+				Since the beginning, our goal has been to serve and uplift society by enriching human connections and social togetherness.
+			</p>
+		</main>
+		<nav class="menu">
+		</nav>
+	</div>
+	<script src="js/script.js" defer></script>
 </body>
 </html>
