The logo redirects to the top of the page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<!-- THE MAIN CONTENT -->
 	<div id="main-content">
 		<header class="bg-yellow grid-header mb-3">
-			<img src="img/main-logo.svg" alt="OUI" class="pl-5 logo-image">
+			<a href="#"><img src="img/main-logo.svg" alt="OUI" class="pl-5 logo-image"></a>
 			<div class="header-menu">
 				<a href="#" class="header-text font-circular">MENU</a>
 				<a href="#" class="header-text font-circular">ABOUT US</a>
