--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				A coffee shop with a French twist!
 			</h1>
 			<div class="main-image">
-				<img src="img/main-grid-image.jpg" alt="food" class="main-grid-image">
+				<img src="img/main-grid-image.png" alt="food" class="main-grid-image">
 			</div>
 			<p class="font-circular">
 				Since the beginning, our goal has been to serve and uplift society by enriching human connections and social togetherness.
