Revert "Merge pull request #15 from AnaMariaOlaruNHLstenden/main"
This reverts commit 834330d45e230fd7c9c27967e51f3e459ad54b65, reversing
changes made to 1dcfea3814d7c348d52a31dfdca9657a21b1cc9a.

--- a/index.html
+++ b/index.html
@@ -46,34 +46,10 @@
 					class="main-grid-image"
 			/>
 		</div>
-		<!--Ana's part-->
-		<!--About us part one-->
-		<p class="font-circular" class="p-size">
-			Improving the recipe so you can enjoy the fine taste and variety of our coffee and
-			once you try them, you too will experience their fine flavor.
+		<p class="font-circular">
+			Since the beginning, our goal has been to serve and uplift society by
+			enriching human connections and social togetherness.
 		</p>
-		<!--About us part two-->
-		<div id="about-us2">
-
-			<div id="img">
-				<img id="about_us_img" src="/img/cappuccino-about-us-img.jpg" alt="cappuccino">
-			</div>
-
-			<div id="about-us-font">
-
-			<p2>What is the story behind OUI?</p2>
-
-			<p>
-				 In 2023, Marcel Baron, founded the café OUI with a lifelong journey of bringing fine coffee
-				 flavours and desserts designated for all ages.<br>
-				 He set the mission of “bringing high-quality and affordable products to everyone
-				 around the world”.<br>
-				 Took a long time through thick and thin, to
-				 begin the production of our core ingredients independently.
-			</p>
-			</div>
-			
-		</div>
 	</main>
 	<nav class="menu"></nav>
 	<footer>
