menu for the coffee with red background

--- a/index.html
+++ b/index.html
@@ -48,7 +48,12 @@
 			enriching human connections and social togetherness.
 		</p>
 	</main>
-	<nav class="menu"></nav>
+	<div class="background-for-menu">
+		<article class="article" id="red-bg">
+			<h1>Coffee</h1>
+			<p>As a Dutch brand, OUI hand selects and roasts only the finest aromatic Arabica and bold Robusta beans for our signature blends.</p>
+		</article>
+	</div>
 	<footer>
 		<p class="font-circular">Contact Us</p>
 		<p class="font-circular">Email: marcel.baron@nhlstenden.com   Phone: +31 (0) 6-82588713   Adress: C, Raadhuisplein 7811 AP Emmen</p>
