--- a/index.html
+++ b/index.html
@@ -29,7 +29,15 @@
 		<img src="img/main-logo.png" alt="OUI" class="logo-image"/>
 		</a>
 		<div class="header-menu">
-			<a href="#" class="header-text font-circular-bold"> Menuuu</a>
+			<div class="dropdown-menu">
+				<button class="header-text font-circular-bold dropbtn-menu"> Menu</button>
+				<div class="dropdown-menu-content">
+					<a href="#">Coffee</a>
+					<a href="#">Pain</a>
+					<a href="#">Sweets</a>
+					<a href="#">Tea</a>
+				</div>
+			</div>
 			<a href="#" class="header-text font-circular-bold"> About Us</a>
 			<a href="#" class="header-text font-circular-bold dropdown"> Locations</a>
 		</div>
@@ -51,7 +59,7 @@
 	<nav class="menu"></nav>
 	<footer>
 		<p class="font-circular">Contact Us</p>
-		<p class="font-circular">Email: marcel.baron@nhlstenden.com   Phone: +31 (0) 6-82588713   Adress: C, Raadhuisplein 7811 AP Emmen</p>
+		<p class="font-circular"> marcel.baron@nhlstenden.com   +31 (0) 6-82588713 </p>
 	</footer>
 </div>
 <script src="js/script.js" defer></script>
