--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		</div>
 	</header>
 	<main class="main-grid pl-5 pr-5">
-		<h1 class="header-text">A coffee shop with a French twist!</h1>
+		<h1>A coffee shop with a French twist!</h1>
 		<div class="main-image">
 			<img
 					src="img/main-grid-image.png"
@@ -56,10 +56,13 @@
 			enriching human connections and social togetherness.
 		</p>
 	</main>
-	<nav class="menu"></nav>
-	<footer>
-		<p class="font-circular">Contact Us</p>
-		<p class="font-circular"> marcel.baron@nhlstenden.com   +31 (0) 6-82588713 </p>
+	<footer class="font-circular">
+		<div class="footer-left">
+		<p>Contact us<br>marcel.baron@nhlstenden.com +31 (0) 6-82588713 </p>
+		</div>
+		<div class="footer-right">
+		<p>Opening times:<br>"The opening times"</p>
+		</div>
 	</footer>
 </div>
 <script src="js/script.js" defer></script>
