fixed a bunch of bugs and reworked the scrollbar, the dropdown menu and the selection colors, also moved Ana's about-me2 to the right

--- a/index.html
+++ b/index.html
@@ -43,7 +43,13 @@
 		</div>
 	</header>
 	<main class="main-grid pl-5 pr-5">
-		<h1>A coffee shop with a French twist!</h1>
+		<div>
+			<h1>A coffee shop with a French twist!</h1>
+			<p class="font-circular">
+				Improving the recipe so you can enjoy the fine taste and variety of our coffee and
+				once you try them, you too will experience their fine flavor.
+			</p>
+		</div>
 		<div class="main-image">
 			<img
 					src="img/main-grid-image.png"
@@ -51,39 +57,37 @@
 					class="main-grid-image"
 			/>
 		</div>
-		<p class="font-circular">
-			Improving the recipe so you can enjoy the fine taste and variety of our coffee and
-			once you try them, you too will experience their fine flavor.
-		</p>
+		
 		<!--About us part two-->
 		<div id="about-us2">
-
 			<div id="img">
 				<img id="about_us_img" src="img/cappuccino-about-us-img.jpg" alt="cappuccino">
 			</div>
-
 			<div id="about-us-font">
-
-			<p2>What is the story behind OUI?</p2>
-
-			<p>
-				 In 2023, Marcel Baron, founded the café OUI with a lifelong journey of bringing fine coffee
-				 flavours and desserts designated for all ages.<br>
-				 He set the mission of “bringing high-quality and affordable products to everyone
-				 around the world”.<br>
-				 Took a long time through thick and thin, to
-				 begin the production of our core ingredients independently.
-			</p>
+				<p2>
+					What is the story behind OUI?
+				</p2>
+				<p>
+					In 2023, Marcel Baron, founded the café OUI with a lifelong journey of bringing fine coffee
+					flavours and desserts designated for all ages.<br>
+					He set the mission of “bringing high-quality and affordable products to everyone
+					around the world”.<br>
+					Took a long time through thick and thin, to
+					begin the production of our core ingredients independently.
+				</p>
 			</div>
-			
 		</div>
 	</main>
 	<footer class="font-circular">
 		<div class="footer-left">
-		<p>Contact us<br>marcel.baron@nhlstenden.com +31 (0) 6-82588713 </p>
+		<p>
+			Contact us<br>marcel.baron@nhlstenden.com +31 (0) 6-82588713 
+		</p>
 		</div>
 		<div class="footer-right">
-		<p>Opening times:<br>"The opening times"</p>
+		<p>
+			Opening times:<br>"The opening times"
+		</p>
 		</div>
 </div>
 <script src="js/script.js" defer></script>
