modified picture used for the menu of coffee

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 		<article class="article" id="red-bg">
 			<h1>Coffee</h1>
 			<p>As a Dutch brand, OUI hand selects and roasts only the finest aromatic Arabica and bold Robusta beans for our signature blends.</p>
+			<img src="img/pexels-chevanon-photography-302904-removebg-preview 1.png" alt="coffee cup without background">
 		</article>
 	</div>
 	<article class="article">
