minor bug fixes

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<div class="dropdown-menu">
 				<button class="header-text font-circular-bold dropbtn-menu"> Menu</button>
 				<div class="dropdown-menu-content">
-					<a href="#">Coffee</a>
+					<a href="#coffee-link">Coffee</a>
 					<a href="#">Pain</a>
 					<a href="#">Sweets</a>
 					<a href="#">Tea</a>
@@ -82,8 +82,8 @@
 	<div class="background-for-menu">
 		<article class="article" id="red-bg">
 			<h1>Coffee</h1>
-			<p>As a Dutch brand, OUI hand selects and roasts only the finest aromatic Arabica and bold Robusta beans for our signature blends.</p>
-			<img src="img/pexels-chevanon-photography-302904-removebg-preview 1.png" alt="coffee cup without background">
+			<p id="coffee-link">As a Dutch brand, OUI hand selects and roasts only the finest aromatic Arabica and bold Robusta beans for our signature blends.</p>
+			<!-- <img src="img/pexels-chevanon-photography-302904-removebg-preview 1.png" alt="coffee cup without background"> -->
 		</article>
 	</div>
 	<article class="article">
@@ -160,13 +160,13 @@
 	</article>
 	<div class="background-for-menu">
 		<article class="article" id="yellow-bg">
-			<h1>Sweet</h1>
+			<h1>Sweets</h1>
 			<p>Enjoy the greatest confections, each delectable OUI sweets a monument to unwavering quality and outstanding flavor.</p>
 		</article>
 	</div>
 	<article class="article">
 		<h2>Food</h2>
-		<h1 id="title-of-sweet">Sweet</h1>
+		<h1 id="title-of-sweet">Sweets</h1>
 		<section id="Macaron">
 			<p>Macaron (3 pieces)</p>
 			<small>Vanilla</small>
