--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 				<button class="header-text font-circular-bold dropbtn-menu"> Menu</button>
 				<div class="dropdown-menu-content">
 					<a href="#coffee-link">Coffee</a>
-					<a href="#">Pain</a>
-					<a href="#">Sweets</a>
-					<a href="#">Tea</a>
+					<a href="#pain-link">Pain</a>
+					<a href="#sweets-link">Sweets</a>
+					<a href="#tea-link">Tea</a>
 				</div>
 			</div>
 			<a href="#" class="header-text font-circular-bold"> About Us</a>
@@ -97,7 +97,7 @@
 			<p>Americano</p>
 			<p>Flat white</p>
 			<p>Home-made lemonade</p>
-			<p>Jus d’orange</p>
+			<p>Jus d'orange</p>
 			<p>Apple juice</p>
 			<p>Ice tea</p>
 			<p>Flat water</p>
@@ -121,7 +121,7 @@
 	<div class="background-for-menu">
 		<article class="article" id="light-blue-bg">
 			<h1>Pain</h1>
-			<p>Our high-quality OUI croissant. Experience unparalleled pastry excellence with our high-quality croissant, where buttery layer of perfection await in every bite.</p>
+			<p id="pain-link">Our high-quality OUI croissant. Experience unparalleled pastry excellence with our high-quality croissant, where buttery layer of perfection await in every bite.</p>
 		</article>
 	</div>
 	<article class="article">
@@ -161,7 +161,7 @@
 	<div class="background-for-menu">
 		<article class="article" id="yellow-bg">
 			<h1>Sweets</h1>
-			<p>Enjoy the greatest confections, each delectable OUI sweets a monument to unwavering quality and outstanding flavor.</p>
+			<p id="sweets-link">Enjoy the greatest confections, each delectable OUI sweet a monument to unwavering quality and outstanding flavor.</p>
 		</article>
 	</div>
 	<article class="article">
@@ -193,8 +193,8 @@
 	</article>
 	<div class="background-for-menu">
 		<article class="article" id="blue-bg">
-			<h1>Pain</h1>
-			<p>Our high-quality OUI croissant. Experience unparalleled pastry excellence with our high-quality croissant, where buttery layer of perfection await in every bite.</p>
+			<h1>Tea</h1>
+			<p id="tea-link">Our high-quality OUI croissant. Experience unparalleled pastry excellence with our high-quality croissant, where buttery layer of perfection await in every bite.</p>
 		</article>
 	</div>
 	<article class="article">
@@ -212,10 +212,6 @@
 			<p>€4,80</p>
 		</section>
 	</article>
-	<footer>
-		<p class="font-circular">Contact Us</p>
-		<p class="font-circular">Email: marcel.baron@nhlstenden.com   Phone: +31 (0) 6-82588713   Adress: C, Raadhuisplein 7811 AP Emmen</p>
-	</footer>
 	<footer class="font-circular">
 		<div class="footer-left">
 		<p>
@@ -227,6 +223,7 @@
 			Opening times:<br>"The opening times"
 		</p>
 		</div>
+	</footer>
 </div>
 <script src="js/script.js" defer></script>
 </body>
