--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 	<article class="article">
 		<h2>Drinks</h2>
 		<h1 id="title-of-each-catagory">Coffee & Cold Drinks</h1>
+		<img src="img/coffee-illustration-bg.png" alt="coffee-illustration-bg">
 		<section id="Cappuccino">
 			<p>Cappuccino</p>
 			<p>Latte</p>
@@ -122,11 +123,13 @@
 		<article class="article" id="light-blue-bg">
 			<h1>Pain</h1>
 			<p>Our high-quality OUI croissant. Experience unparalleled pastry excellence with our high-quality croissant, where buttery layer of perfection await in every bite.</p>
+			<img src="img/croissant.png" alt="croissant-bg">
 		</article>
 	</div>
 	<article class="article">
 		<h2>Food</h2>
 		<h1 id="title-of-croissant">Croissant or Petit Pain</h1>
+		<img src="img/coffee-illustration-bg.png" alt="coffee-illustration-bg">
 		<section id="Natural">
 			<p>Natural/ plain</p>
 			<p>Butter</p>
@@ -162,11 +165,13 @@
 		<article class="article" id="yellow-bg">
 			<h1>Sweet</h1>
 			<p>Enjoy the greatest confections, each delectable OUI sweets a monument to unwavering quality and outstanding flavor.</p>
+			<img src="img/macaron.png" alt="macaron-bg">
 		</article>
 	</div>
 	<article class="article">
 		<h2>Food</h2>
 		<h1 id="title-of-sweet">Sweet</h1>
+		<img src="img/coffee-illustration-bg.png" alt="coffee-illustration-bg">
 		<section id="Macaron">
 			<p>Macaron (3 pieces)</p>
 			<small>Vanilla</small>
@@ -195,11 +200,13 @@
 		<article class="article" id="blue-bg">
 			<h1>Pain</h1>
 			<p>Our high-quality OUI croissant. Experience unparalleled pastry excellence with our high-quality croissant, where buttery layer of perfection await in every bite.</p>
+			<img src="img/tea.png" alt="tea-bg">
 		</article>
 	</div>
 	<article class="article">
 		<h2>Drinks</h2>
 		<h1 id="title-of-tea">Tea</h1>
+		<img src="img/coffee-illustration-bg.png" alt="coffee-illustration-bg">
 		<section id="tea">
 			<p>Tea</p>
 			<small>Black tea</small>
@@ -212,6 +219,7 @@
 			<p>€4,80</p>
 		</section>
 	</article>
+	<!-- WHO DID THE FOOTER DRAG YOUR PART AWAY OF MY TEA MENU AND DELETE <BR> IN YOUR CODE, THE FOOTER SHOULD BE OUT OF THE BODY-->
 	<footer>
 		<p class="font-circular">Contact Us</p>
 		<p class="font-circular">Email: marcel.baron@nhlstenden.com   Phone: +31 (0) 6-82588713   Adress: C, Raadhuisplein 7811 AP Emmen</p>
