--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 		</div>
 		<div class="footer-right">
 		<p>
-			Opening times:<br>"The opening times"
+			Opening times:<br>Mon 10:00 to 21:00 Tue 10:00 to 21:00 Wed 10:00 to 21:00 Thu 10:00 to 21:00 Fri 10:00 to 21:00 Sat 15:00 to 22:00 Sun 15:00 to 22:00
 		</p>
 		</div>
 	</footer>
