Font size of the Description of the menu

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		</a>
 		<div class="header-menu">
 			<div class="dropdown-menu">
-				<button class="header-text font-circular-bold dropbtn-menu"> Menu</button>
+				<button class="header-text font-circular-bold dropbtn-menu fs-3"> Menu</button>
 				<div class="dropdown-menu-content">
 					<a href="#coffee-link">Coffee</a>
 					<a href="#pain-link">Pain</a>
@@ -38,14 +38,14 @@
 					<a href="#tea-link">Tea</a>
 				</div>
 			</div>
-			<a href="#" class="header-text font-circular-bold"> About Us</a>
-			<a href="#" class="header-text font-circular-bold dropdown"> Locations</a>
+			<a href="#" class="header-text font-circular-bold fs-3"> About Us</a>
+			<a href="#" class="header-text font-circular-bold dropdown fs-3"> Locations</a>
 		</div>
 	</header>
 	<main class="main-grid pl-5 pr-5">
 		<div>
 			<h1>A coffee shop with a French twist!</h1>
-			<p class="font-circular">
+			<p class="font-circular fs-3">
 				Improving the recipe so you can enjoy the fine taste and variety of our coffee and
 				once you try them, you too will experience their fine flavor.
 			</p>
@@ -82,7 +82,7 @@
 	<div class="background-for-menu">
 		<article class="article" id="red-bg">
 			<h1>Coffee</h1>
-			<p id="coffee-link">As a Dutch brand, OUI hand selects and roasts only the finest aromatic Arabica and bold Robusta beans for our signature blends.</p>
+			<p id="coffee-link" class="fs-3">As a Dutch brand, OUI hand selects and roasts only the finest aromatic Arabica and bold Robusta beans for our signature blends.</p>
 			<!-- <img src="img/pexels-chevanon-photography-302904-removebg-preview 1.png" alt="coffee cup without background"> -->
 		</article>
 	</div>
@@ -121,7 +121,7 @@
 	<div class="background-for-menu">
 		<article class="article" id="light-blue-bg">
 			<h1>Pain</h1>
-			<p id="pain-link">Our high-quality OUI croissant. Experience unparalleled pastry excellence with our high-quality croissant, where buttery layer of perfection await in every bite.</p>
+			<p id="pain-link" class="fs-3">Our high-quality OUI croissant. Experience unparalleled pastry excellence with our high-quality croissant, where buttery layer of perfection await in every bite.</p>
 		</article>
 	</div>
 	<article class="article">
@@ -161,7 +161,7 @@
 	<div class="background-for-menu">
 		<article class="article" id="yellow-bg">
 			<h1>Sweets</h1>
-			<p id="sweets-link">Enjoy the greatest confections, each delectable OUI sweet a monument to unwavering quality and outstanding flavor.</p>
+			<p id="sweets-link" class="fs-3">Enjoy the greatest confections, each delectable OUI sweet a monument to unwavering quality and outstanding flavor.</p>
 		</article>
 	</div>
 	<article class="article">
