--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 		</div>
 	</header>
 	<main class="main-grid pl-5 pr-5">
-		<div>
+		<div class="main-subgrid">
 			<h1>A coffee shop with a French twist!</h1>
 			<p class="font-circular">
 				Improving the recipe so you can enjoy the fine taste and variety of our coffee and
@@ -77,141 +77,63 @@
 				</p>
 			</div>
 		</div>
-	</main>
-<!-- the menu -->
-	<div class="background-for-menu">
-		<article class="article" id="red-bg">
-			<h1>Coffee</h1>
-			<p id="coffee-link">As a Dutch brand, OUI hand selects and roasts only the finest aromatic Arabica and bold Robusta beans for our signature blends.</p>
-			<!-- <img src="img/pexels-chevanon-photography-302904-removebg-preview 1.png" alt="coffee cup without background"> -->
-		</article>
-	</div>
-	<article class="article">
-		<h2>Drinks</h2>
-		<h1 id="title-of-each-catagory">Coffee & Cold Drinks</h1>
-		<section id="Cappuccino">
-			<p>Cappuccino</p>
-			<p>Latte</p>
-			<p>Mocha</p>
-			<p>Espresso</p>
-			<p>Americano</p>
-			<p>Flat white</p>
-			<p>Home-made lemonade</p>
-			<p>Jus d'orange</p>
-			<p>Apple juice</p>
-			<p>Ice tea</p>
-			<p>Flat water</p>
-			<p>Sparkling water</p>
-		</section>
-		<section id="price-for-coffee">
-			<p>€1,30</p>
-			<p>€2,30</p>
-			<p>€2,80</p>
-			<p>€3,30</p>
-			<p>€4,50</p>
-			<p>€4,70</p>
-			<p>€1,30</p>
-			<p>€2,30</p>
-			<p>€2,80</p>
-			<p>€3,30</p>
-			<p>€4,50</p>
-			<p>€4,70</p>
-		</section>
-	</article>
-	<div class="background-for-menu">
-		<article class="article" id="light-blue-bg">
-			<h1>Pain</h1>
-			<p id="pain-link">Our high-quality OUI croissant. Experience unparalleled pastry excellence with our high-quality croissant, where buttery layer of perfection await in every bite.</p>
-		</article>
-	</div>
-	<article class="article">
-		<h2>Food</h2>
-		<h1 id="title-of-croissant">Croissant or Petit Pain</h1>
-		<section id="Natural">
-			<p>Natural/ plain</p>
-			<p>Butter</p>
-			<p>Herb butter</p>
-			<p>Jam or Nutella</p>
-			<p>Brie or camembert</p>
-			<p>Cheese with walnuts</p>
-			<p>Cream cheese</p>
-			<p>Soft goat cheese</p>
-			<p>Smoked salmon</p>
-			<p>Tuna salad</p>
-			<p>Egg salad</p>
-			<p>Hummus</p>
-			<p>French ragout</p>
-		</section>
-		<section id="price-for-croissant">
-			<p>€1,30</p>
-			<p>€2,30</p>
-			<p>€2,80</p>
-			<p>€3,30</p>
-			<p>€4,50</p>
-			<p>€4,70</p>
-			<p>€4,80</p>
-			<p>€4,80</p>
-			<p>€5,80</p>
-			<p>€4,80</p>
-			<p>€4,80</p>
-			<p>€4,60</p>
-			<p>€4,70</p>
-		</section>
-	</article>
-	<div class="background-for-menu">
-		<article class="article" id="yellow-bg">
-			<h1>Sweets</h1>
-			<p id="sweets-link">Enjoy the greatest confections, each delectable OUI sweet a monument to unwavering quality and outstanding flavor.</p>
-		</article>
-	</div>
-	<article class="article">
-		<h2>Food</h2>
-		<h1 id="title-of-sweet">Sweets</h1>
-		<section id="Macaron">
-			<p>Macaron (3 pieces)</p>
-			<small>Vanilla</small>
-			<small>Strawberries and cream</small>
-			<small>Lemon Curd</small>
-			<small>Cookies and Cream</small>
-			<small>Blueberry</small>
-			<small>Chocolate</small>
-			<small>Mocha/Coffee</small>
-			<p>Paris-Brest</p>
-			<p>Cream Puffs</p>
-			<p>Éclair</p>
-			<p>Millefeuille</p>
-		</section>
-		<section id="price-for-sweet">
-			<p>€6,00</p>
-			<div id="sub-price-for-sweet">
-			<p>€3,90</p>
-			<p>€3,90</p>
-			<p>€4,70</p>
-			<p>€4,70</p>
+		<div class="menu">
+			<div class="menu-coffee">
+				<div class="menu-coffee-header">
+					<h2>
+						Coffee
+					</h2>
+					<p>
+						Crazy? I was crazy once. They locked me in a room. A rubber room! A rubber room with rats,and rats make me crazy. 
+					</p>
+				</div>
+				<div class="menu-coffee-subheader">
+					<h3>Drinks</h3>
+					<h1>Coffee & Cold Drinks</h1>
+				</div>
+				<div class="menu-coffee-main-content">
+					<ul class="menu-coffee-items">
+						<li>Cappuccino</li>
+						<li>Latte</li>
+						<li>Mocha</li>
+						<li>Espresso</li>
+						<li>Americano</li>
+						<li>Flat white</li>
+						<li>Home-made lemonade</li>
+						<li>Jus d'orange</li>
+						<li>Apple juice</li>
+						<li>Ice tea</li>
+						<li>Flat water</li>
+						<li> Sparkling water</li>
+					</ul>
+					<ul class="menu-coffee-prices">
+						<li>€ 1,30</li>
+						<li>€ 2,30</li>
+						<li>€ 2,80</li>
+						<li>€ 3,30</li>
+						<li>€ 4,50</li>
+						<li>€ 4,70</li>
+						<li>€ 1,30</li>
+						<li>€ 2,30</li>
+						<li>€ 2,80</li>
+						<li>€ 3,30</li>
+						<li>€ 4,50</li>
+						<li>€ 4,70</li>
+					</ul>
+				</div>          
 			</div>
-		</section>
-	</article>
-	<div class="background-for-menu">
-		<article class="article" id="blue-bg">
-			<h1>Tea</h1>
-			<p id="tea-link">Our high-quality OUI croissant. Experience unparalleled pastry excellence with our high-quality croissant, where buttery layer of perfection await in every bite.</p>
-		</article>
-	</div>
-	<article class="article">
-		<h2>Drinks</h2>
-		<h1 id="title-of-tea">Tea</h1>
-		<section id="tea">
-			<p>Tea</p>
-			<small>Black tea</small>
-			<small>Green tea</small>
-			<small>Herbal tea</small>
-			<small>Jasmin tea</small>
-			<small>Rooibos</small>
-		</section>
-		<section id="price-for-tea">
-			<p>€4,80</p>
-		</section>
-	</article>
+			<div class="menu-pain">
+
+			</div>
+			<div class="menu-sweets">
+
+			</div>
+			<div class="menu tea">
+
+			</div>
+
+			</div>
+	</main>
 	<footer class="font-circular">
 		<div class="footer-left">
 		<p>
