fixed location being behind footer

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 		</div>
 	</main>
 	<div class="location">
-		<div class="locationText">Find a store</div>
+		<div class="locationText">Find the store</div>
 		<div id="map" class="location-map">.</div>
 	</div>
 	<footer class="font-circular">
