--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 					<h2>
 						Coffee
 					</h2>
-					<p>
+					<p id="coffee-link">
 						Crazy? I was crazy once. They locked me in a room. A rubber room! A rubber room with rats,and rats make me crazy. 
 					</p>
 				</div>
@@ -128,7 +128,7 @@
 					<h2>
 						Pain
 					</h2>
-					<p>
+					<p id="pain-link">
 						Crazy? I was crazy once. They locked me in a room. A rubber room! A rubber room with rats,and rats make me crazy. 
 					</p>
 				</div>
@@ -174,7 +174,7 @@
 					<h2>
 						Sweets
 					</h2>
-					<p>
+					<p id="sweets-link">
 						Crazy? I was crazy once. They locked me in a room. A rubber room! A rubber room with rats,and rats make me crazy. 
 					</p>
 				</div>
@@ -216,7 +216,7 @@
 					<h2>
 						Tea
 					</h2>
-					<p>
+					<p id="tea-link">
 						Crazy? I was crazy once. They locked me in a room. A rubber room! A rubber room with rats,and rats make me crazy. 
 					</p>
 				</div>
