Description, Margin and Font Sizes
Header Content Product Prices

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		</a>
 		<div class="header-menu">
 			<div class="dropdown-menu">
-				<button class="header-text font-circular-bold dropbtn-menu"> Menu</button>
+				<button class="header-text font-circular-bold dropbtn-menu text-settings"> Menu</button>
 				<div class="dropdown-menu-content">
 					<a href="#coffee-link">Coffee</a>
 					<a href="#pain-link">Pain</a>
@@ -39,14 +39,14 @@
 					<a href="#tea-link">Tea</a>
 				</div>
 			</div>
-			<a href="#" class="header-text font-circular-bold"> About Us</a>
-			<a href="#map" class="header-text font-circular-bold dropdown"> Locations</a>
+			<a href="#" class="header-text font-circular-bold text-settings"> About Us</a>
+			<a href="#map" class="header-text font-circular-bold dropdown text-settings"> Locations</a>
 		</div>
 	</header>
 	<main class="main-grid">
 		<div class="main-subgrid pl-5">
 			<h1>A coffee shop with a French twist!</h1>
-			<p class="font-circular">
+			<p class="font-circular text-settings">
 				Improving the recipe so you can enjoy the fine taste and variety of our coffee and
 				once you try them, you too will experience their fine flavor.
 			</p>
@@ -80,153 +80,158 @@
 		</div>
 		<div class="menu">
 			<div class="menu-coffee">
-				<div class="menu-coffee-header mb-3">
-					<h2>
+				<div class="menu-coffee-header mb-3 size-to-fill">
+					<h2 class="header-margin">
 						Coffee
 					</h2>
-					<p id="coffee-link">
-						Crazy? I was crazy once. They locked me in a room. A rubber room! A rubber room with rats,and rats make me crazy. 
+					<p id="coffee-link" class="text-settings content-discription-margin-first">
+						As a Dutch brand, OUI hand selects and roasts only the finest aromatic 
+						Arabica and bold Robusta beans for our signature blends.
 					</p>
 				</div>
 				<div class="menu-subheader mb-3">
-					<h3>Drinks</h3>
+					<h3 class="text-settings-header">Drinks</h3>
 					<h1>Coffee & Cold Drinks</h1>
 				</div>
 				<div class="menu-main-content mb-3">
 					<ul class="menu-items">
-						<li>Cappuccino</li>
-						<li>Latte</li>
-						<li>Mocha</li>
-						<li>Espresso</li>
-						<li>Americano</li>
-						<li>Flat white</li>
-						<li>Home-made lemonade</li>
-						<li>Jus d'orange</li>
-						<li>Apple juice</li>
-						<li>Ice tea</li>
-						<li>Flat water</li>
-						<li>Sparkling water</li>
+						<li class="text-settings">Cappuccino</li>
+						<li class="text-settings">Latte</li>
+						<li class="text-settings">Mocha</li>
+						<li class="text-settings">Espresso</li>
+						<li class="text-settings">Americano</li>
+						<li class="text-settings">Flat white</li>
+						<li class="text-settings">Home-made lemonade</li>
+						<li class="text-settings">Jus d'orange</li>
+						<li class="text-settings">Apple juice</li>
+						<li class="text-settings">Ice tea</li>
+						<li class="text-settings">Flat water</li>
+						<li class="text-settings">Sparkling water</li>
 					</ul>
 					<ul class="menu-prices">
-						<li>€ 1,30</li>
-						<li>€ 2,30</li>
-						<li>€ 2,80</li>
-						<li>€ 3,30</li>
-						<li>€ 4,50</li>
-						<li>€ 4,70</li>
-						<li>€ 1,30</li>
-						<li>€ 2,30</li>
-						<li>€ 2,80</li>
-						<li>€ 3,30</li>
-						<li>€ 4,50</li>
-						<li>€ 4,70</li>
+						<li class="text-settings">€ 1,30</li>
+						<li class="text-settings">€ 2,30</li>
+						<li class="text-settings">€ 2,80</li>
+						<li class="text-settings">€ 3,30</li>
+						<li class="text-settings">€ 4,50</li>
+						<li class="text-settings">€ 4,70</li>
+						<li class="text-settings">€ 1,30</li>
+						<li class="text-settings">€ 2,30</li>
+						<li class="text-settings">€ 2,80</li>
+						<li class="text-settings">€ 3,30</li>
+						<li class="text-settings">€ 4,50</li>
+						<li class="text-settings">€ 4,70</li>
 					</ul>
 				</div>          
 			</div>
 			<div class="menu-pain">
-				<div class="menu-pain-header mb-3">
-					<h2>
+				<div class="menu-pain-header mb-3 size-to-fill">
+					<h2 class="header-margin-second">
 						Pain
 					</h2>
-					<p id="pain-link">
-						Crazy? I was crazy once. They locked me in a room. A rubber room! A rubber room with rats,and rats make me crazy. 
+					<p id="pain-link" class="text-settings content-discription-margin-second">
+						Our high-quality OUI croissant. Experience unparalleled pastry excellence with 
+						our high-quality croissant, where buttery layer of perfection await in every bite.
 					</p>
 				</div>
 				<div class="menu-subheader mb-3">
-					<h3>Food</h3>
+					<h3 class="text-settings-header">Food</h3>
 					<h1>Croissant or Petit Pain</h1>
 				</div>
 				<div class="menu-main-content mb-3">
 					<ul class="menu-items">
-						<li>Natural/Plain</li>
-						<li>Butter</li>
-						<li>Herb butter</li>
-						<li>Jam or Nutella</li>
-						<li>Brie or camembert</li>
-						<li>Cheese with walnuts</li>
-						<li>Cream cheese</li>
-						<li>Soft goat cheese</li>
-						<li>Smoked salmon</li>
-						<li>Tuna salad</li>
-						<li>Egg salad</li>
-						<li>Hummus</li>
-						<li>Frech ragout</li>
+						<li class="text-settings">Natural/Plain</li>
+						<li class="text-settings">Butter</li>
+						<li class="text-settings">Herb butter</li>
+						<li class="text-settings">Jam or Nutella</li>
+						<li class="text-settings">Brie or camembert</li>
+						<li class="text-settings">Cheese with walnuts</li>
+						<li class="text-settings">Cream cheese</li>
+						<li class="text-settings">Soft goat cheese</li>
+						<li class="text-settings">Smoked salmon</li>
+						<li class="text-settings">Tuna salad</li>
+						<li class="text-settings">Egg salad</li>
+						<li class="text-settings">Hummus</li>
+						<li class="text-settings">Frech ragout</li>
 					</ul>
 					<ul class="menu-prices">
-						<li>€ 1,30</li>
-						<li>€ 2,30</li>
-						<li>€ 2,80</li>
-						<li>€ 3,30</li>
-						<li>€ 4,50</li>
-						<li>€ 4,70</li>
-						<li>€ 4,80</li>
-						<li>€ 4,80</li>
-						<li>€ 5,80</li>
-						<li>€ 4,80</li>
-						<li>€ 4,80</li>
-						<li>€ 4,60</li>
-						<li>€ 4,70</li>
+						<li class="text-settings">€ 1,30</li>
+						<li class="text-settings">€ 2,30</li>
+						<li class="text-settings">€ 2,80</li>
+						<li class="text-settings">€ 3,30</li>
+						<li class="text-settings">€ 4,50</li>
+						<li class="text-settings">€ 4,70</li>
+						<li class="text-settings">€ 4,80</li>
+						<li class="text-settings">€ 4,80</li>
+						<li class="text-settings">€ 5,80</li>
+						<li class="text-settings">€ 4,80</li>
+						<li class="text-settings">€ 4,80</li>
+						<li class="text-settings">€ 4,60</li>
+						<li class="text-settings">€ 4,70</li>
 					</ul>
 				</div>
 			</div>
 			<div class="menu-sweets">
-				<div class="menu-sweets-header mb-3">
-					<h2>
+				<div class="menu-sweets-header mb-3 size-to-fill">
+					<h2 class="header-margin">
 						Sweets
 					</h2>
-					<p id="sweets-link">
-						Crazy? I was crazy once. They locked me in a room. A rubber room! A rubber room with rats,and rats make me crazy. 
+					<p id="sweets-link" class="text-settings content-discription-margin-first">
+						Enjoy the greatest confections, each delectable OUI sweets a monument 
+						to unwavering quality and outstanding flavor.
 					</p>
 				</div>
 				<div class="menu-subheader mb-3">
-					<h3>Food</h3>
+					<h3 class="text-settings-header">Food</h3>
 					<h1>Sweets</h1>
 				</div>
 				<div class="menu-main-content mb-3">
 					<ul class="menu-items">
-						<li>Macaron (3 pieces)</li>
+						<li class="text-settings">Macaron (3 pieces)</li>
 						<li class="subcategory">Vanilla</li>
 						<li class="subcategory">Lemon Curd</li>
 						<li class="subcategory">Cookies and Cream</li>
 						<li class="subcategory">Blueberry</li>
 						<li class="subcategory">Chocolate</li>
 						<li class="subcategory">Mocha/Coffee</li>
-						<li>Paris-Brest</li>
-						<li>Cream Puffs</li>
-						<li>Eclair</li>
-						<li>Millefeuille</li>
+						<li class="text-settings">Paris-Brest</li>
+						<li class="text-settings">Cream Puffs</li>
+						<li class="text-settings">Eclair</li>
+						<li class="text-settings">Millefeuille</li>
 					</ul>
 					<ul class="menu-prices">
-						<li>€ 6,00</li>
+						<li class="text-settings">€ 6,00</li>
 						<li class="subcategory">‎</li>
 						<li class="subcategory">‎</li>
 						<li class="subcategory">‎</li>
 						<li class="subcategory">‎</li>
 						<li class="subcategory">‎</li>
 						<li class="subcategory">‎</li>
-						<li>€ 4,70</li>
-						<li>€ 4,70</li>
-						<li>€ 3,90</li>
-						<li>€ 3,90</li>
+						<li class="text-settings">€ 4,70</li>
+						<li class="text-settings">€ 4,70</li>
+						<li class="text-settings">€ 3,90</li>
+						<li class="text-settings">€ 3,90</li>
 					</ul>
 				</div>
 			</div>
 			<div class="menu tea">
-				<div class="menu-tea-header mb-3">
-					<h2>
+				<div class="menu-tea-header mb-3 size-to-fill">
+					<h2 class="header-margin-second">
 						Tea
 					</h2>
-					<p id="tea-link">
-						Crazy? I was crazy once. They locked me in a room. A rubber room! A rubber room with rats,and rats make me crazy. 
+					<p id="tea-link" class="text-settings content-discription-margin-second">
+						Savor the epitome of OUI tea craftsmanship with our high-quality blends, 
+						where each sip is a journey into the world of unparalleled flavor and 
+						refinement. 
 					</p>
 				</div>
 				<div class="menu-subheader mb-3">
-					<h3>Drinks</h3>
+					<h3 class="text-settings-header">Drinks</h3>
 					<h1>Tea</h1>
 				</div>
 				<div class="menu-main-content mb-3">
 					<ul class="menu-items">
-						<li>Tea</li>
+						<li class="text-settings">Tea</li>
 						<li class="subcategory">Black Tea</li>
 						<li class="subcategory">Green Tea</li>
 						<li class="subcategory">Herbal Tea</li>
@@ -234,7 +239,7 @@
 						<li class="subcategory">Rooibos</li>
 					</ul>
 					<ul class="menu-prices">
-						<li>€ 4,80</li>
+						<li class="text-settings">€ 4,80</li>
 						<li class="subcategory">‎</li>
 						<li class="subcategory">‎</li>
 						<li class="subcategory">‎</li>
