--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 		</div>
 	</header>
 	<main class="main-grid">
+		<!--About us part 1-->
 		<div class="main-subgrid pl-5">
 			<h1>A coffee shop with a French twist!</h1>
 			<p class="font-circular text-settings">
@@ -53,31 +54,157 @@
 		</div>
 		<div class="main-image">
 			<img
-					src="img/main-grid-image.png"
+					src="img/coffee_cup_about_us.png"
 					alt="food"
 					class="main-grid-image"
 			/>
 		</div>
-		
-		<!--About us part two-->
-		<div id="about-us2">
-			<div id="img">
-				<img id="about_us_img" src="img/cappuccino-about-us-img.jpg" alt="cappuccino">
+		<!--PRODUCTS-->
+
+		<article id="products_section">
+			<h2 id="categories">
+				Categories 
+			</h2>
+			<h1 id="products_header">
+				Our Products<img id="red_coffee" src="img/illustrations_red_coffee.png" alt="red_coffee">
+			</h1>
+			<div id="product_row1">
+				<div class="product">
+					<div class="tag">coffee</div>
+					<img class="product_img" src="img/coffee (1).jpg" alt="Cappuccino">
+					<p class="product_name">Cappuccino</p>
+					<div class="price_raiting">
+						<p class="old_price"><s>€2.00</s></p>
+						<p class="new_price">€5.00</p>
+						<span class="raiting">&starf;&starf;&starf;&starf;&starf;</span>
+					</div>
+				</div>
+				<div class="product">
+					<div class="tag">coffee</div>
+					<img class="product_img" src="img/coffee (2).jpg" alt="Latte">
+					<p class="product_name">Latte</p>
+					<div class="price_raiting">
+						<p class="old_price"><s>€2.00</s></p>
+						<p class="new_price">€5.00</p>
+						<span class="raiting">&starf;&starf;&starf;&starf;&starf;</span>
+					</div>
+				</div>
+				<div class="product">
+					<div class="tag">coffee</div>
+					<img class="product_img" src="img/coffee (3).jpg" alt="Mocha">
+					<p class="product_name">Mocha</p>
+					<div class="price_raiting">
+						<p class="old_price"><s>€2.00</s></p>
+						<p class="new_price">€5.00</p>
+						<span class="raiting">&starf;&starf;&starf;&starf;&starf;</span>
+					</div>
+				</div>
+				<div class="product">
+					<div class="tag">coffee</div>
+					<img class="product_img" src="img/coffee (4).jpg" alt="Espresso">
+					<p class="product_name">Espresso</p>
+					<div class="price_raiting">
+						<p class="old_price"><s>€2.00</s></p>
+						<p class="new_price">€5.00</p>
+						<span class="raiting">&starf;&starf;&starf;&starf;&starf;</span>
+					</div>
+				</div>
 			</div>
-			<div id="about-us-font">
-				<h2>
-					What is the story behind OUI?
-				</h2>
-				<p>
-					In 2023, Marcel Baron, founded the café OUI with a lifelong journey of bringing fine coffee
-					flavours and desserts designated for all ages.<br>
-					He set the mission of “bringing high-quality and affordable products to everyone
-					around the world”.<br>
-					Took a long time through thick and thin, to
-					begin the production of our core ingredients independently.
-				</p>
+			<div id="product_row2">
+				<div class="product">
+					<div class="tag">Croissant</div>
+					<img class="product_img croissant1" src="img/Croissant (2).jpg" alt="Croissant Jam">
+					<p class="product_name">Croissant Jam</p>
+					<div class="price_raiting">
+						<p class="old_price"><s>€2.00</s></p>
+						<p class="new_price">€5.00</p>
+						<span class="raiting">&starf;&starf;&starf;&starf;&starf;</span>
+					</div>
+				</div>
+				<div class="product">
+					<div class="tag">Croissant</div>
+					<img class="product_img croissant2" src="img/Croissant (1).jpg" alt="Croissant Plain">
+					<p class="product_name">Croissant Plain</p>
+					<div class="price_raiting">
+						<p class="old_price"><s>€2.00</s></p>
+						<p class="new_price">€5.00</p>
+						<span class="raiting">&starf;&starf;&starf;&starf;&starf;</span>
+					</div>
+				</div>
+				<div class="product">
+					<div class="tag">Macaron</div>
+					<img class="product_img macaron1" src="img/macaron (1).jpg" alt="Macaron Blueberry">
+					<p class="product_name">Macaron(Blueberry)</p>
+					<div class="price_raiting">
+						<p class="old_price"><s>€2.00</s></p>
+						<p class="new_price">€5.00</p>
+						<span class="raiting">&starf;&starf;&starf;&starf;&starf;</span>
+					</div>
+				</div>
+				<div class="product">
+					<div class="tag">Macaron</div>
+					<img class="product_img macaron2" src="img/macaron (2).jpg" alt="Macaron Lemon Curd">
+					<p class="product_name">Macaron(Lemon Crud)</p>
+					<div class="price_raiting">
+						<p class="old_price"><s>€2.00</s></p>
+						<p class="new_price">€5.00</p>
+						<span class="raiting">&starf;&starf;&starf;&starf;&starf;</span>
+					</div>
+				</div>
 			</div>
-		</div>
+		</article>
+
+		<article id="product_highlight">
+			<img class="bg-patterns" src="img/part2products.png" alt="pattern">
+			<div id="hl_header">
+				<h1 id="hl_Offer">Offer</h1>
+				<h2 id="hl_sign">Our Signature Beverages</h2>
+			</div>
+			<div id="product_row3">
+				<div class="product">
+					<div class="tag">Tea</div>
+					<img class="product_img" src="img/tea (3).jpg" alt="3">
+					<p class="product_name">Black Tea</p>
+					<div class="price_raiting">
+						<p class="old_price"><s>€2.00</s></p>
+						<p class="new_price">€5.00</p>
+						<span class="raiting">&starf;&starf;&starf;&starf;&starf;</span>
+					</div>
+				</div>
+				<div class="product">
+					<div class="tag">Cold Drinks</div>
+					<img class="product_img" src="img/tea (1).jpg" alt="1">
+					<p class="product_name">Ice Tea</p>
+					<div class="price_raiting">
+						<p class="old_price"><s>€2.00</s></p>
+						<p class="new_price">€5.00</p>
+						<span class="raiting">&starf;&starf;&starf;&starf;&starf;</span>
+					</div>
+				</div>
+				<div class="product">
+					<div class="tag">Coffee</div>
+					<img class="product_img americano" src="img/coffee (5).png" alt="5">
+					<p class="product_name">Americano</p>
+					<div class="price_raiting">
+						<p class="old_price"><s>€2.00</s></p>
+						<p class="new_price">€5.00</p>
+						<span class="raiting">&starf;&starf;&starf;&starf;&starf;</span>
+					</div>
+				</div>
+				<div class="product">
+					<div class="tag">Tea</div>
+					<img class="product_img" src="img/tea (2).jpg" alt="2">
+					<p class="product_name">Rooibos</p>
+					<div class="price_raiting">
+						<p class="old_price"><s>€2.00</s></p>
+						<p class="new_price">€5.00</p>
+						<span class="raiting">&starf;&starf;&starf;&starf;&starf;</span>
+					</div>
+				</div>
+			</div>
+		</article>
+
+		<!--Menu-->
 		<div class="menu">
 			<div class="menu-coffee">
 				<div class="menu-coffee-header mb-3 size-to-fill">
@@ -250,6 +377,27 @@
 			</div>
 		</div>
 	</main>
+	<!--About us part two-->
+	<div id="about-us2">
+		<div id="img">
+			<img id="about_us_img" src="img/cappuccino-about-us-img.jpg" alt="cappuccino">
+		</div>
+		<div id="about-us-font">
+			<h2>
+				What is the story behind OUI?
+			</h2>
+			<p>
+				In 2023, Marcel Baron, founded the café OUI with a lifelong journey of bringing fine coffee
+				flavours and desserts designated for all ages.<br>
+				He set the mission of “bringing high-quality and affordable products to everyone
+				around the world”.
+				Took a long time through thick and thin, to
+				begin the production of our core ingredients independently.
+			</p>
+		</div>
+	</div>
+
+	<!--LOCATION-->
 	<div class="location">
 		<div class="location-text">Find a store</div>
 		<div id="map" class="location-map">.</div>
