fixing the products
added prices
fixed the format
Downside: It deforms when it's phone size

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 					<p class="product_name">Cappuccino</p>
 					<div class="price_raiting">
 						<p class="old_price"><s>€2.00</s></p>
-						<p class="new_price">€5.00</p>
+						<p class="new_price">€1.30</p>
 						<span class="raiting">&starf;&starf;&starf;&starf;&starf;</span>
 					</div>
 				</div>
@@ -84,8 +84,8 @@
 					<img class="product_img" src="img/coffee (2).jpg" alt="Latte">
 					<p class="product_name">Latte</p>
 					<div class="price_raiting">
-						<p class="old_price"><s>€2.00</s></p>
-						<p class="new_price">€5.00</p>
+						<p class="old_price"><s>€3.00</s></p>
+						<p class="new_price">€2.30</p>
 						<span class="raiting">&starf;&starf;&starf;&starf;&starf;</span>
 					</div>
 				</div>
@@ -94,8 +94,8 @@
 					<img class="product_img" src="img/coffee (3).jpg" alt="Mocha">
 					<p class="product_name">Mocha</p>
 					<div class="price_raiting">
-						<p class="old_price"><s>€2.00</s></p>
-						<p class="new_price">€5.00</p>
+						<p class="old_price"><s>€3.00</s></p>
+						<p class="new_price">€2.80</p>
 						<span class="raiting">&starf;&starf;&starf;&starf;&starf;</span>
 					</div>
 				</div>
@@ -104,8 +104,8 @@
 					<img class="product_img" src="img/coffee (4).jpg" alt="Espresso">
 					<p class="product_name">Espresso</p>
 					<div class="price_raiting">
-						<p class="old_price"><s>€2.00</s></p>
-						<p class="new_price">€5.00</p>
+						<p class="old_price"><s>€3.50</s></p>
+						<p class="new_price">€3.30</p>
 						<span class="raiting">&starf;&starf;&starf;&starf;&starf;</span>
 					</div>
 				</div>
@@ -116,8 +116,8 @@
 					<img class="product_img croissant1" src="img/Croissant (2).jpg" alt="Croissant Jam">
 					<p class="product_name">Croissant Jam</p>
 					<div class="price_raiting">
-						<p class="old_price"><s>€2.00</s></p>
-						<p class="new_price">€5.00</p>
+						<p class="old_price"><s>€4.00</s></p>
+						<p class="new_price">€3.30</p>
 						<span class="raiting">&starf;&starf;&starf;&starf;&starf;</span>
 					</div>
 				</div>
@@ -127,27 +127,27 @@
 					<p class="product_name">Croissant Plain</p>
 					<div class="price_raiting">
 						<p class="old_price"><s>€2.00</s></p>
-						<p class="new_price">€5.00</p>
+						<p class="new_price">€1.30</p>
 						<span class="raiting">&starf;&starf;&starf;&starf;&starf;</span>
 					</div>
 				</div>
 				<div class="product">
-					<div class="tag">Macaron</div>
+					<div class="tag">Sweets</div>
 					<img class="product_img macaron1" src="img/macaron (1).jpg" alt="Macaron Blueberry">
 					<p class="product_name">Macaron(Blueberry)</p>
 					<div class="price_raiting">
-						<p class="old_price"><s>€2.00</s></p>
-						<p class="new_price">€5.00</p>
+						<p class="old_price"><s>€10.00</s></p>
+						<p class="new_price">€6.00</p>
 						<span class="raiting">&starf;&starf;&starf;&starf;&starf;</span>
 					</div>
 				</div>
 				<div class="product">
-					<div class="tag">Macaron</div>
+					<div class="tag">Sweets</div>
 					<img class="product_img macaron2" src="img/macaron (2).jpg" alt="Macaron Lemon Curd">
 					<p class="product_name">Macaron(Lemon Crud)</p>
 					<div class="price_raiting">
-						<p class="old_price"><s>€2.00</s></p>
-						<p class="new_price">€5.00</p>
+						<p class="old_price"><s>€10.00</s></p>
+						<p class="new_price">€6.00</p>
 						<span class="raiting">&starf;&starf;&starf;&starf;&starf;</span>
 					</div>
 				</div>
@@ -155,7 +155,9 @@
 		</article>
 
 		<article id="product_highlight">
-			<img class="bg-patterns" src="img/part2products.png" alt="pattern">
+			<div class="bg-patterns">
+			<img class="bg-obj" src="img/part2products.png" alt="pattern">
+			</div>
 			<div id="hl_header">
 				<h1 id="hl_Offer">Offer</h1>
 				<h2 id="hl_sign">Our Signature Beverages</h2>
@@ -166,8 +168,8 @@
 					<img class="product_img" src="img/tea (3).jpg" alt="3">
 					<p class="product_name">Black Tea</p>
 					<div class="price_raiting">
-						<p class="old_price"><s>€2.00</s></p>
-						<p class="new_price">€5.00</p>
+						<p class="old_price"><s>€5.00</s></p>
+						<p class="new_price">€4.80</p>
 						<span class="raiting">&starf;&starf;&starf;&starf;&starf;</span>
 					</div>
 				</div>
@@ -176,8 +178,8 @@
 					<img class="product_img" src="img/tea (1).jpg" alt="1">
 					<p class="product_name">Ice Tea</p>
 					<div class="price_raiting">
-						<p class="old_price"><s>€2.00</s></p>
-						<p class="new_price">€5.00</p>
+						<p class="old_price"><s>€4.00</s></p>
+						<p class="new_price">€3.30</p>
 						<span class="raiting">&starf;&starf;&starf;&starf;&starf;</span>
 					</div>
 				</div>
@@ -186,8 +188,8 @@
 					<img class="product_img americano" src="img/coffee (5).png" alt="5">
 					<p class="product_name">Americano</p>
 					<div class="price_raiting">
-						<p class="old_price"><s>€2.00</s></p>
-						<p class="new_price">€5.00</p>
+						<p class="old_price"><s>€5.00</s></p>
+						<p class="new_price">€4.30</p>
 						<span class="raiting">&starf;&starf;&starf;&starf;&starf;</span>
 					</div>
 				</div>
@@ -196,8 +198,8 @@
 					<img class="product_img" src="img/tea (2).jpg" alt="2">
 					<p class="product_name">Rooibos</p>
 					<div class="price_raiting">
-						<p class="old_price"><s>€2.00</s></p>
-						<p class="new_price">€5.00</p>
+						<p class="old_price"><s>€3.50</s></p>
+						<p class="new_price">€3.30</p>
 						<span class="raiting">&starf;&starf;&starf;&starf;&starf;</span>
 					</div>
 				</div>
@@ -400,7 +402,10 @@
 	<!--LOCATION-->
 	<div class="location">
 		<div class="location-text">Find a store</div>
-		<div id="map" class="location-map">.</div>
+		<div id="map" class="location-map">
+			<script src="js/script.js" defer></script>
+			<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDZfRcGBeCzMXByxU_nHI_scX4YZCzgMzU&callback=initMap" async defer></script>
+		</div>
 	</div>
 	<footer class="font-circular">
 		<div class="footer-left">
